--- a/.github/workflows/make_case.yaml
+++ b/.github/workflows/make_case.yaml
@@ -54,7 +54,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build123d@0.9
+          pip install build123d==0.9
 
       - name: Run Python command
         run: |
