--- a/.github/workflows/make_case.yaml
+++ b/.github/workflows/make_case.yaml
@@ -54,7 +54,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "cadquery-ocp<7.8" build123d==0.9.1
+          pip install "ocpsvg<0.6" build123d==0.9.1
 
       - name: Run Python command
         run: |
